--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
   </head>
   <body>
     <div class="main-container">
-      <form class="form-group">
-        <input type="text" placeholder="Search City" name="city" />
-        <br />
-        <span class="error-msg" style="display: none"
-          >No matching location found!</span
-        >
-      </form>
+      <header>
+        <form class="form-group">
+          <input type="text" placeholder="Search City" name="city" />
+          <br />
+          <span class="error-msg" style="display: none"
+            >No matching location found!</span
+          >
+        </form>
+      </header>
       <div class="today fade-in2"></div>
     </div>
     <script src="main.js"></script>
