Added  Forecasting and Responsive

--- a/index.html
+++ b/index.html
@@ -18,7 +18,18 @@
           >
         </form>
       </header>
-      <div class="today fade-in2"></div>
+
+      <div class="responsive">
+        <div class="today fade-in2"></div>
+
+        <hr class="divider" />
+
+        <div class="tomorrow0 fade-in2 forecast"></div>
+
+        <div class="tomorrow1 fade-in2 forecast"></div>
+
+        <div class="tomorrow2 fade-in2 forecast"></div>
+      </div>
     </div>
     <script src="main.js"></script>
   </body>
